--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MySQL": {
+     "Major": 8,
+     "Minor": 0,
+     "Build": 36
+  }
 }
