--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-modal-hook": "^3.0.2",
     "react-router-dom": "^6.24.0"
   },
   "devDependencies": {
